Fix api link on about page; Fix image width on mobile devices; Disable social links in footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -284,3 +284,17 @@ header.masthead.image .site-heading .h1 {
 .image-viewer img {
     width: 100%;
 }
+
+/**
+ * Calendar viewer styles.
+ */
+.calendar-viewer img {
+    width: 100%;
+}
+
+/**
+ * Calendar overview styles.
+ */
+.calendar-overview img {
+    width: 100%;
+}
